--- a/test api.html
+++ b/test api.html
@@ -3,40 +3,77 @@
 <head>
 	<title></title>
 	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+	<link rel="stylesheet" type="text/css" href="css.css">
 </head>
 <body>
-	<div id="app">
-		<b>ชื่อ : <input type="text" v-model="name"></b>
-		<b>น้ำหนัก : <input type="number" v-model="weight"></b><br>
-		<div v-for="i in req_data">
-			<h1>Name : {{data.bodies[i].englishName}}</h1><!--ชื่อดาว-->
-			<h1>Gravity : {{data.bodies[i].gravity}} m.s <sup>-2</sup> </h1><!--แรงโน้มถ่วง-->
-			<h1>Weight on Planet : {{calculate_weight(data.bodies[i].gravity)}} kg.</h1><br><!--น้ำหนักบนดาวเคราะห์นั้นๆ-->
+	<center>
+		<div id="app">
+			<!-- หน้าป๊อปอัพบังคับกรอกข้อมูล -->
+			<div class="popup">
+				<div class="popup-content">
+					<b>ชื่อ : <input type="text" v-model="name"></b>
+					<b>น้ำหนัก : <input type="number" v-model="weight" min="0"> kg.</b>
+					<button @click="close()">ตกลง</button>
+				</div>
+			</div>
+
+			<h1>Planet : {{data.bodies[req_data[point]].englishName}}</h1><!--ชื่อดาว-->
+			<h1>Name : {{name}}</h1><!--ชื่อผู้ใช้-->
+			<!-- <h1>Gravity : {{data.bodies[req_data[point]].gravity}} m.s <sup>-2</sup> </h1> --><!--แรงโน้มถ่วง-->
+			<h1>Weight on Planet : {{calculate_weight(data.bodies[req_data[point]].gravity)}} kg.</h1><br><!--น้ำหนักบนดาวเคราะห์นั้นๆ-->
+
+			<button @click="open()">กรอกข้อมูลใหม่</button><br>
+
+			<!-- แถบปุ่มดาวเคราะห์ -->
+			<button @click="point = 0" class="planet">Moon</button>
+			<button @click="point = 1" class="planet">Mercury</button>
+			<button @click="point = 2" class="planet">Venus</button>
+			<button @click="point = 3" class="planet">Earth</button>
+			<button @click="point = 4" class="planet">Mars</button>
+			<button @click="point = 5" class="planet">Jupiter</button>
+			<button @click="point = 6" class="planet">Saturn</button>
+			<button @click="point = 7" class="planet">Uranus</button>
+			<button @click="point = 8" class="planet">Neptune</button>
+			<button @click="point = 9" class="planet">Pluto</button>
+
 		</div>
-	</div>
+	</center>
 
 
 </body>
 <script>
+
 	fetch('https://api.le-systeme-solaire.net/rest/bodies/')
 			.then(response => response.json())
 			.then(json => {
 				app.data = json
 				console.log(json)
 			})
+
 	let app = new Vue({
 			el: '#app',
 			data: {
 				data:{},//ข้อมูล JSON
-				req_data:[0, 240, 244, 243, 239, 238, 241, 199, 219, 208],//ตำแหน่งใน List bodies ["Mercury", "Venus", "Earth", "Mars", "Jupiter", "Saturn", "Uranus", "Neptune", "Pluto"] ชื่อดาวตามตำแหน่งใน req_data
+				req_data:[0, 240, 244, 243, 239, 238, 241, 199, 219, 208],//ตำแหน่งใน List bodies ["Moon", Mercury", "Venus", "Earth", "Mars", "Jupiter", "Saturn", "Uranus", "Neptune", "Pluto"] ชื่อดาวตามตำแหน่งใน req_data
 				weight:0,//น้ำหนักของผู้ใช้
 				weight_on_planet:0,//น้ำหนักบนดาวเคราะห์นั้น
-				name:""//ชื่อผู้ใช้
-			}, 
+				name:"",//ชื่อผู้ใช้
+				point:3//ตำแหน่งในlist req_data
+			},
+
 			methods:{
 				calculate_weight:function(gravity){//คำนวณน้ำหนักบนดาวต่างๆ
 					this.weight_on_planet = (gravity*this.weight)/9.8
 					return this.weight_on_planet.toFixed(2)//toFixed = ทศนิยม...ตำแหน่ง
+				},
+
+				close:function(){//ปิดป๊อปอัพ
+  					document.querySelector('.popup').style.display = "none";
+				},
+
+				open:function(){//เปิดป๊อปอัพ
+					this.point = 3;
+  					document.querySelector('.popup').style.display = "flex";
 				}
 			}
 		})
