--- a/MultiRocket-3/index.html
+++ b/MultiRocket-3/index.html
@@ -24,19 +24,40 @@
 			<!-- <h1>Gravity : {{data.bodies[req_data[point]].gravity}} m.s <sup>-2</sup> </h1> --><!--แรงโน้มถ่วง-->
 			<h1>Weight on Planet : {{calculate_weight(data.bodies[req_data[point]].gravity)}} kg.</h1><br><!--น้ำหนักบนดาวเคราะห์นั้นๆ-->
 
-			<button @click="change_status()">กรอกข้อมูลใหม่</button><br>
+			<button class="again" @click="change_status()">กรอกข้อมูลใหม่</button><br>
 
 			<!-- แถวตาวเคราะห์ -->
-			<div v-for="i in 10">
-				<div v-if="(i-1) == 1" class="img_planet left_screen" :id="name_id+(i-1)">{{data.bodies[req_data[i-1]].englishName}}</div><!--***ใส่รูปแทนชื่อดาวด้วย***-->
-				<div v-else-if="(i-1) == 2" class="img_planet" :id="name_id+(i-1)">{{data.bodies[req_data[i-1]].englishName}}</div><!--***ใส่รูปแทนชื่อดาวด้วย***-->
-				<div v-else-if="(i-1) == 3" class="img_planet right_screen" :id="name_id+(i-1)">{{data.bodies[req_data[i-1]].englishName}}</div><!--***ใส่รูปแทนชื่อดาวด้วย***-->
-				<div v-else class="invisible" :id="name_id+(i-1)">{{data.bodies[req_data[i-1]].englishName}}</div><!--***ใส่รูปแทนชื่อดาวด้วย***-->
+			<div v-for="i in 9">
+				<div v-if="(i-1) == 1" class="img_planet left_screen" :id="name_id+(i-1)">
+					<img :src="img_data[i-1]">
+					<br>
+					{{data.bodies[req_data[i-1]].englishName}}
+				</div>
+
+				<div v-else-if="(i-1) == 2" class="img_planet" :id="name_id+(i-1)">
+					<img :src="img_data[i-1]">
+					<br>
+					{{data.bodies[req_data[i-1]].englishName}}
+				</div>
+				<div v-else-if="(i-1) == 3" class="img_planet right_screen" :id="name_id+(i-1)">
+					<img :src="img_data[i-1]">
+					<br>
+					{{data.bodies[req_data[i-1]].englishName}}
+				</div>
+				<div v-else class="invisible" :id="name_id+(i-1)">
+					<img :src="img_data[i-1]">
+					<br>
+					{{data.bodies[req_data[i-1]].englishName}}
+				</div>
 			</div>
 			<!-- แถวตาวเคราะห์ -->
 
 			<!-- แถบปุ่มดาวเคราะห์ -->
-			<button v-for="i in 10" @click="point = i-1, status = true, direction()" class="planet">{{data.bodies[req_data[i-1]].englishName}}</button><!--***ใส่รูปแทนชื่อดาวด้วย***-->
+			<div v-for="i in 9" @click="point = i-1, status = true, direction()" class="planet">
+					<img class="img_mini" :src="img_data[i-1]">
+					<br>
+					{{data.bodies[req_data[i-1]].englishName}}
+			</div><!--***ใส่รูปแทนชื่อดาวด้วย***-->
 			<!-- แถบปุ่มดาวเคราะห์ -->
 
 		</div>
@@ -61,7 +82,8 @@
 			el: '#app',
 			data: {
 				data:{},//ข้อมูล JSON
-				req_data:[240, 244, 243, 0, 239, 238, 241, 199, 219, 208],//ตำแหน่งใน List bodies ["Moon", Mercury", "Venus", "Earth", "Mars", "Jupiter", "Saturn", "Uranus", "Neptune", "Pluto"] ชื่อดาวตามตำแหน่งใน req_data
+				req_data:[240, 244, 243, 0, 239, 238, 241, 199, 219],//ตำแหน่งใน List bodies [Mercury", "Venus", "Earth","Moon", "Mars", "Jupiter", "Saturn", "Uranus", "Neptune", "Pluto"] ชื่อดาวตามตำแหน่งใน req_data
+				img_data:["https://png2.cleanpng.com/dy/a2e5183a49e3799ad8de2718705af324/L0KzQYm3VMIzN6ZwfZH0aYP2gLBuTf1me6Rqhtlucj3occP7iL1ubaNojeRELYDvcbBslL10d51mip98eYP3db60jfVza6Z3kZ8AYXTnQ4K5VMNkOmhqTJCAM0i2Q4aAVcE2OmU5TKc9N0a1RIe7TwBvbz==/kisspng-messenger-earth-mercury-planet-solar-system-mercury-5add31243c27e4.5383357515244454762464.png", "https://png2.cleanpng.com/dy/94fcceb58e41a17cb4d60351fdbb1300/L0KzQYm3U8I5N51piZH0aYP2gLBuTflkbV51hNN3ZYSwhcPojwV0NZ5qitVAcomwfrb3lQVvbV51hNN3ZYT2PYbogvI6O5Q5eqUEMEW8Poe5UcUxOGgASac7MkK3Qoa3UMc0PWYziNDw/kisspng-ice-planet-uranus-mercury-neptune-planets-5abb93c4b39059.6215007915222425007355.png", "https://png2.cleanpng.com/dy/3bfe5cf3c9d443a553ac34c8a83c8d48/L0KzQYm3V8A4N6F8gpH0aYP2gLBuTgNxcJZ3gdVqbD3occP7iL1maaN5gJ98Y3nofrTsTfZtaaUyfdN7dHiwg7FqifV1gV51hNN3ZYTkPcXwhgJzaV46eqY5Ykbodbe3gfFjOl86TqYANEO0SIK8U8A6Pmg8UaIEOEW7PsH1h5==/kisspng-spherical-earth-earth-science-flat-earth-society-planeta-tierra-5b40b6eef0aab2.5645431815309677909858.png", "https://png2.cleanpng.com/dy/41e3b9c4e207ed68342edbc5bd1865e1/L0KzQYm3U8I4N5ZAiZH0aYP2gLBuTfVieqVtRdVxYX7qPba0U710d51mip9uY3zsgMTsTf1wd58yeeV9ZYLyebW0VfFjaZdpS6g9N0Hodoe1WMczQGI3S6U6NUK1QoG6WcU5Omo2S5D5bne=/kisspng-earth-chang-e-3-solar-eclipse-moon-asteroid-5abafd36471ef6.8728123315222039582913.png", "https://png2.cleanpng.com/dy/c026173666a85c3612cf4e75f08b2aed/L0KzQYm3U8MyN6Zpj5H0aYP2gLBuTfVieqVtReZucoLog8X5ifFtNaFxedDudD3wccP6TgNwdJJ3ReVEc4TofX70ggJ0NWZme6I8YUS0SIiBUvM3NmQATaQ6OEG0QYa5UsU1P2M7TacANUGxgLBu/kisspng-earth-terrestrial-planet-mars-solar-system-mars-5ac03a418782c6.3952181115225472655551.png", "https://png2.cleanpng.com/dy/ed038060e96c9a5bafa12c91c82331a8/L0KzQYm3V8E3N516gZH0aYP2gLBuTfp2eJp5feQ2dHjoPbBwjvUueJ1mhtd9cz32f73okr10gaR5fd82c3H3hcP1TgJwdJJzfJ9zdYDshLb5TcQuPZM5fKZqMUO3doXsgsQvOWk9UKc6Nkm0RYS4V8kyQGo2S6Q9OT7zfri=/kisspng-jupiter-the-nine-planets-solar-system-saturn-roland-jupiter-4-5b4d4a134f4eb4.1888516915317918913249.png", "https://png2.cleanpng.com/dy/791594eaa67c76eeb3c17bdd348a6fce/L0KzQYm3U8MyN5l0j5H0aYP2gLBuTfVieqVtReVqdIX1fn73jPFvbaUyi9H1YYKwg8r6lPVuNaNuhtk2c4n2hLb0Tfp2eJp5feQ2NXHldofqUskzPZQ8TKI3Nka3R4m7UMUyPWM3TKs9NUC4QYa7WL5xdpg=/kisspng-earth-saturn-planet-solar-system-ring-system-jupiter-5abf6c2925c740.6647840515224945051548.png", "https://png2.cleanpng.com/dy/1fc82137278e4291a6ee76c2971fc88d/L0KzQYm3UsE6N6pvj5H0aYP2gLBuTf5meKV6htc2cHzkfrb7TgNwdJJ3ReVEc4TofX73jCN1a5J3fJ95YYDogn78kvFvfaQye9N7dHByfn7qjPlxaaN5i58AYUjlQofqUPI4PmI3SJCAMEGzRIO9WcE2OWo1TqoDNkS6RYK4TwBvbz==/kisspng-neptune-planet-solar-system-postcard-paper-uranus-cartoon-cliparts-5a8b26c0b76120.5010426915190688647511.png", "https://png2.cleanpng.com/dy/d2a5c0b1063f51a5d422cf5a7ba14316/L0KzQYm3U8E5N5RufZH0aYP2gLBuTgNicZ10ip93ZYD3hbBsTfVieqVtRed7YX74g373jPFvbaUye95ycHH1hMS0kPxidpZ5RdR1dXWwRbLohfJlOmU4SNM7NEWxRYi4Ucc3Pmk2TaQ6NEC0QYO7Uck6Ol91htk=/kisspng-sailor-neptune-earth-uranus-planet-cliparts-planet-blue-5aaebd2430a245.5711766815214011241992.png"],// [Mercury", "Venus", "Earth","Moon", "Mars", "Jupiter", "Saturn", "Uranus", "Neptune", "Pluto"] ชื่อดาวตามตำแหน่งใน img_data
 				weight:0,//น้ำหนักของผู้ใช้
 				weight_on_planet:0,//น้ำหนักบนดาวเคราะห์นั้น
 				name:"",//ชื่อผู้ใช้
@@ -81,7 +103,7 @@
 					this.status_popup = !this.status_popup;
 				},
 				delete_class:function (){//ซ้อนดาวที่ไม่ใช้
-					for (var i = 0; i <= 9; i++) {
+					for (var i = 0; i <= 8; i++) {
 						if (i < this.point-1 || i > this.point+1) {//ไม่ได้อยู่ในช่วง 3 ดาวที่ต้องแสดงผลใช้ไหม?
 							document.getElementById(this.name_id+i).className = "invisible";//ซ้อน
 						}
@@ -92,7 +114,7 @@
 						this.L_or_R = "left";
 						this.point -= 1;
 						this.status = true;
-					}else if (this.point < 9 && event.deltaY < 0) {//เช็คว่าขวาสุดหรือยัง event.deltaY อ่านค่าจาก scroll mouse โดยที่น้อยกว่า 0 คือ "ขึ้น"
+					}else if (this.point < 8 && event.deltaY < 0) {//เช็คว่าขวาสุดหรือยัง event.deltaY อ่านค่าจาก scroll mouse โดยที่น้อยกว่า 0 คือ "ขึ้น"
 						this.L_or_R = "right";
 						this.point += 1;
 						this.status = true;
@@ -104,7 +126,7 @@
 						if (this.point != 0) {//ตัวซ้ายสุดหรือยัง
 							document.getElementById(this.name_id+(this.point-1)).className = "img_planet left_screen direction_" + this.L_or_R + "_screen_left";
 						}
-						if (this.point != 9) {//ตัวขวาสุดหรือยัง
+						if (this.point != 8) {//ตัวขวาสุดหรือยัง
 							document.getElementById(this.name_id+(this.point+1)).className = "img_planet right_screen direction_" + this.L_or_R + "_screen_right";
 						}
 					}
