--- a/MultiRocket-3/index.html
+++ b/MultiRocket-3/index.html
@@ -11,8 +11,8 @@
 			<!-- หน้าป๊อปอัพบังคับกรอกข้อมูล -->
 			<div v-if="status_popup" class="popup">
 				<div class="popup-content">
-					<b>name : <input type="text" v-model="name"></b>
-					<b>weight : <input type="number" v-model="weight" min="0"> kg.</b>
+					<b>Name : <input type="text" v-model="name"></b>
+					<b>Weight : <input type="number" v-model="weight" min="0"> kg.</b>
 					<button @click="change_status()">ตกลง</button>
 				</div>
 			</div>
