--- a/MultiRocket-3/index.html
+++ b/MultiRocket-3/index.html
@@ -13,7 +13,7 @@
 				<div class="popup-content">
 					<b>Name : <input type="text" v-model="name"></b>
 					<b>Weight : <input type="number" v-model="weight" min="0"> kg.</b>
-					<button @click="change_status()">ตกลง</button>
+					<button @click="change_status()">OK</button>
 				</div>
 			</div>
 			<!-- หน้าป๊อปอัพบังคับกรอกข้อมูล -->
